[tool.poetry]
name = "imageprocessing-flet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "imageprocessing_flet", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.22.1"
opencv-python = "^4.10.0.82"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
